feat: add new filters on favorites list
